--- a/src/main/resources/lang/de_DE.yml
+++ b/src/main/resources/lang/de_DE.yml
@@ -1,43 +1,139 @@
+---
+prefix: "<white>[<aqua>Plots<white>] "
+plot:
+  no-owner: "<green>Nicht verkauft"
+  no-members: "<gray>*<i>Niemand*"
+  no-banned: "<gray>*<i>Niemand*"
 command:
   plot:
-    info: """<gray>» Plot Id: <plot-id>
-    Gruppe: <group>
-    Preis: <price>
-    Status: <state>
-    Besitzer: <owner>
-    Mitglieder: <members>
-    Flags: <flags>
-    Welt: <world>
-    Koordinaten: <location>"""
-    no-plot: "Bitte stelle dich auf ein Plot."
+    info:
+      - <gray>▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰<white>[<aqua>Plot-Info<white>]<gray>▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰
+      - "<gray>ID: <yellow><id>"
+      - "<gray>Besitzer: <yellow><owner>"
+      - "<gray>Größe: <yellow><width> <gray>x <yellow><height> <gray>x <yellow><depth>"
+      - "<gray>Vertraut: <yellow><members>"
+      - "<gray>Verboten: <yellow><banned>"
+      - "<gray>Flags: <yellow><flags>"
+      - "<gray>Position: <yellow><world> <gray>- <yellow><location>"
+      - <gray>▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰<white>[<aqua>Plot-Info<white>]<gray>▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰
+    no-plot: <prefix><red>An dieser Stelle befindet sich kein Plot
     claim:
-      not-enough-money: "Du hast nicht genug Geld."
-      unavailable: "Plot nicht verfügbar."
-      success: "Plot erfolgreich gekauft."
+      not-enough-money: <prefix><red>Du hast nicht genug Geld
+      unavailable: <prefix><red>Diese Plot ist schon verkauft oder nicht verfügbar
+      success: <prefix><gray>Du hast <gold><id> <gray>für <gold><price>$ <green>gekauft!
     unclaim:
-      no-owner: 'Du bist nicht der Besitzer.'
-      unavailable: "Plot nicht verfügbar."
-      success: "Plot wurde erfolgreich verkauft".
+      no-owner: <prefix><red>Das darf nur der Besitzer tun!
+      success: <prefix><gray>Du hast <gold><id> <grayfür <gold><price>$ <red>verkauft!
   plotadmin:
-    no-plot: "Bitte stelle dich auf ein Plot."
-    no-suitable-region: "Keine Region gefunden."
+    reload: <prefix><gray>Einstellungen und Nachrichten neu geladen! <green>✔
+    no-plot: <prefix><red>An dieser Stelle befindet sich kein Plot
+    no-suitable-region: <prefix><red>An dieser Stelle befindet sich keine WorldGuard Region
     set-owner:
-      success: "Besitzer wurde geändert."
+      success: <prefix><gray>Der Besitzer wurde zu <gold><new-owner> <gray>geändert
     set-group:
-      success: "Gruppe wurde geändert."
+      no-group: <prefix><red>Diese Gruppe exitstiert nicht!
+      success: <prefix><gray>Die Plot-Gruppe wurde zu <gold><new-group> <gray>geändert
     group:
       create:
-        exists: "Gruppennamen gibt es bereits."
-        success: "Gruppe wurde erstellt."
+        exists: <perfix><red>Diese Gruppe exitstiert bereits!
+        success: <prefix><gray>Gruppe erfolgreich erstellt!
       delete:
-        no-group: "Gruppennamen gibt es nicht."
-        success: "Gruppe erfolgreich gelöscht."
-      set-group:
-        no-group: "Gruppennamen gibt es nicht."
+        no-group: <perfix><red>Diese Gruppe exitstiert nicht!
+        success: <prefix><gray>Gruppe erfolgreich gelöscht!
     delete:
-      not-exists: "Plot existiert nicht."
-      success: "Plot erfolgreich gelöscht."
+      not-exists: <prefix><red>Dieses Plot existiert nicht!
+      success: <prefix><gray>Plot erfolgreich gelöscht!
     create:
-      success: "Plot wurde erstellt."
-      already-exists: "Plot existiert bereits"
-      error: "Es gab einen Fehler..."
+      success: <prefix><gray>Plot erfolgreich erstellt!
+      already-exists: <prefix><red>Plot existiert bereits!
+      error: <prefix><red>Es gab einen Fehler...
+event:
+  plot:
+    interact:
+      deny: <prefix><red>Das darfst du aufgrund der Ploteinstellungen nicht tun!
+gui:
+  item:
+    next-page:
+      display-name:
+        has-next: <!i><gradient:#fc9403:#fce803>Nächste Seite</gradient>
+        no-next: <!i><gradient:#fc9403:#fce803>Nächste Seite</gradient>
+      lore:
+        has-next:
+          - <gray><!i>Du bist derzeit auf Seite <yellow><curr-page>
+          - <gray><!i>Klicke um auf Seite
+            <dark_gray><!i>(<yellow><next-page><dark_gray>/
+            <yellow><max-page><dark_gray>)<!i> <gray>zu kommen
+        no-next:
+          - <gray><!i>Du bist derzeit auf Seite <yellow><curr-page>
+          - <red>Es gibt keine weiteren Seiten
+    prev-page:
+      display-name:
+        has-prev: <!i><gradient:#fc9403:#fce803>Vorherige Seite</gradient>
+        no-prev: <!i><gradient:#fc9403:#fce803>Vorherige Seite</gradient>
+      lore:
+        has-prev:
+          - <gray><!i>Du bist derzeit auf Seite <yellow><curr-page>
+          - <gray><!i>Klicke um auf Seite
+            <dark_gray><!i>(<yellow><prev-page><dark_gray>/
+            <yellow><max-page><dark_gray>)<!i> <gray>zu kommen
+        no-prev:
+          - <gray><!i>Du bist derzeit auf Seite <yellow><curr-page>
+          - <red>Es gibt keine vorherigen Seiten
+  access-modifier-format:
+    active: <!i><gray>▶ <green><access-modifier>
+    inactive: <!i><gray>▸ <dark_gray><access-modifier>
+  friends:
+    title: <!i><#1d71ad>Plot <black>| <dark_gray>Vertraute Spieler
+  main:
+    title: <!i><#1d71ad>Plot <black>| <dark_gray>Einstellungen
+    item:
+      plot-info:
+        name: "<!i><gold>Plot-Info <gray>(<yellow><id><gray>)"
+        lore:
+          - "<!i><gray>Besitzer: <yellow><owner>"
+          - "<!i><gray>Größe: <yellow><width> <gray>x <yellow><height> <gray>x <yellow><depth>"
+          - "<!i><gray>Position: <yellow><world> <gray>- <yellow><location>"
+      biome:
+        name: "<!i><gold>Biom ändern"
+        lore:
+          - "<!i><gray>Derzeit: <green><biome>"
+      warp:
+        name: "<!i><gold>Warp ändern"
+        lore:
+          - ""
+      members:
+        name: "<!i><gold>Verwalte Mitglieder"
+        lore:
+          - ""
+          - "<gray>- Entferne Spieler"
+          - "<gray>- Passe Rechte an"
+      banned:
+        name: "<!i><gold>Verwalte Verbannte Spieler"
+        lore:
+          - ""
+          - "<gray>Lass verbannte Spieler wieder zu"
+      interactable:
+        name: "<!i><gold>Blockinteraktionen anpassen"
+      flags:
+        name: "<!i><gold>Flags anpassen"
+  interactables:
+    title: <!i><#1d71ad>Plot <black>| <dark_gray>Blockinteraktionen
+    item:
+      back:
+        name: <!i><red>Zurück
+      slot:
+        access-modifier:
+          OWNER: "Besitzer"
+          CO_OWNER: "Co-Besitzer"
+          MEMBER: "Mitglied"
+          TEMP_MEMBER: "Helfer"
+          NOBODY: "Niemand"
+          EVERYBODY: "Alle"
+        name: <!i><aqua><item-name>
+        lore:
+          - <!i><gray>Ändere wer dieses Item / diesen Block benutzen
+          - <!i>
+          - <!i><gray>Bedienung
+          - <!i><gray>▸ <yellow>↑ <white>🖰 <gray>[<gold>Right Button<gray>]
+          - <!i><gray>▸ <yellow>↓ <white>🖰 <gray>[<gold>Left Button<gray>]
+          - <!i>
