--- a/src/main/resources/lang/de_DE.yml
+++ b/src/main/resources/lang/de_DE.yml
@@ -47,6 +47,21 @@ command:
       success: <prefix><gray>Plot erfolgreich erstellt!
       already-exists: <prefix><red>Plot existiert bereits!
       error: <prefix><red>Es gab einen Fehler...
+    member:
+      not-sold: <prefix><red>Dieses Plot gehört niemanden!
+      success: <prefix><gray>Mitglied erfolgreich hinzugefügt!
+    remove-member:
+      success: <prefix><gray>Mitglied erfolgreich entfernt!
+  plotmod:
+    create:
+      already-exists: <perfix><red>Hier existiert bereits ein Plot!
+      id-exists: <perfix><red>ID existiert bereits!
+      success: <prefix><gray>Plot erstellt!
+      error: <prefix><red>Es gab einen Fehler...
+    expand:
+      no-region: <prefix><red>An dieser Stelle befindet sich kein Plot, bitte gehe zu einem Plot.
+      success: <prefix><gray>Plot erweitert!
+      error: <prefix><red>Region konnte nicht erweitert werden, überschneidet sich mit einer anderen Region!
 event:
   plot:
     interact:
