--- a/src/main/resources/lang/de_DE.yml
+++ b/src/main/resources/lang/de_DE.yml
@@ -130,82 +130,6 @@ gui:
   access-modifier-format:
     active: <!i><gray>▶ <green><access-modifier>
     inactive: <!i><gray>▸ <dark_gray><access-modifier>
-  main:
-    title: <!i><#1d71ad>Plot <black>| <dark_gray>Einstellungen
-  interactables:
-    title: <!i><#1d71ad>Plot <black>| <dark_gray>Blockinteraktionen
-    item:
-      back:
-        name: <!i><red>Zurück
-      slot:
-        access-modifier:
-          OWNER: "Besitzer"
-          CO_OWNER: "Co-Besitzer"
-          MEMBER: "Mitglied"
-          TEMP_MEMBER: "Zeitliches Mitglied"
-          NOBODY: "Niemand"
-          EVERYBODY: "Alle"
-        name: <!i><aqua><item-name>
-        lore:
-          - <!i><gray>Ändere wer dieses Item / diesen Block benutzen
-          - <!i>
-          - <!i><gray>Bedienung
-          - <!i><gray>▸ <yellow>↑ <white>🖰 <gray>[<gold>Right Button<gray>]
-          - <!i><gray>▸ <yellow>↓ <white>🖰 <gray>[<gold>Left Button<gray>]
-          - <!i>
-      disable: <prefix><gray>Plot erstellen Modus <red>deaktiviert<gray>!
-      enable: <prefix><gray>Plot erstellen Modus <green>aktiviert<gray>! (Setze die Koordinaten mit Rechts & Linksklick)
-      already-exists: <prefix><red>Hier existiert bereits ein Plot!
-      id-exists: <prefix><red>ID existiert bereits!
-      set-locations: <prefix><gray>Benutze <click:run_command:'/plotmod setLocations'><b><red>/plotmod setLocations</b></click> <gray>um eine Region zu markieren!
-      expand: <prefix><gray>Region min auf -64 und max auf 320 gesetzt.
-      success: <prefix><gray>Plot erstellt!
-      loc1-success: <prefix><gray>Location 1 hinzugefügt (x:<x> y:<y> z:<z>)!
-      loc2-success: <prefix><gray>Location 2 hinzugefügt (x:<x> y:<y> z:<z>)!
-      no-block: <prefix><red>Klicke bitte auf einen Block!
-      loc1-empty: <prefix><red>Du musst noch eine Location mit Linksklick hinzufügen!
-      loc2-empty: <prefix><red>Du musst noch eine Location mit Rechtsklick hinzufügen!
-      error: <prefix><red>Es gab einen Fehler...
-    expand:
-      no-region: <prefix><red>An dieser Stelle befindet sich kein Plot, bitte gehe zu einem Plot.
-      success: <prefix><gray>Plot erweitert!
-      error: <prefix><red>Region konnte nicht erweitert werden, überschneidet sich mit einer anderen Region!
-      not-enough-money: <prefix><red>Plot Besitzer hat nicht genügend Geld, es wird <price> benötigt!
-event:
-  plot:
-    interact:
-      deny: <prefix><red>Das darfst du aufgrund der Ploteinstellungen nicht tun!
-gui:
-  item:
-    next-page:
-      display-name:
-        has-next: <!i><gradient:#fc9403:#fce803>Nächste Seite</gradient>
-        no-next: <!i><gradient:#fc9403:#fce803>Nächste Seite</gradient>
-      lore:
-        has-next:
-          - <gray><!i>Du bist derzeit auf Seite <yellow><curr-page>
-          - <gray><!i>Klicke um auf Seite
-            <dark_gray><!i>(<yellow><next-page><dark_gray>/
-            <yellow><max-page><dark_gray>)<!i> <gray>zu kommen
-        no-next:
-          - <gray><!i>Du bist derzeit auf Seite <yellow><curr-page>
-          - <red>Es gibt keine weiteren Seiten
-    prev-page:
-      display-name:
-        has-prev: <!i><gradient:#fc9403:#fce803>Vorherige Seite</gradient>
-        no-prev: <!i><gradient:#fc9403:#fce803>Vorherige Seite</gradient>
-      lore:
-        has-prev:
-          - <gray><!i>Du bist derzeit auf Seite <yellow><curr-page>
-          - <gray><!i>Klicke um auf Seite
-            <dark_gray><!i>(<yellow><prev-page><dark_gray>/
-            <yellow><max-page><dark_gray>)<!i> <gray>zu kommen
-        no-prev:
-          - <gray><!i>Du bist derzeit auf Seite <yellow><curr-page>
-          - <red>Es gibt keine vorherigen Seiten
-  access-modifier-format:
-    active: <!i><gray>▶ <green><access-modifier>
-    inactive: <!i><gray>▸ <dark_gray><access-modifier>
   friends:
     title: <!i><#1d71ad>Plot <black>| <dark_gray>Vertraute Spieler
   main:
@@ -261,3 +185,11 @@ gui:
           - <!i><gray>▸ <yellow>↑ <white>🖰 <gray>[<gold>Right Button<gray>]
           - <!i><gray>▸ <yellow>↓ <white>🖰 <gray>[<gold>Left Button<gray>]
           - <!i>
+  biome:
+    title: <!i><#1d71ad>Plot <black>| <dark_gray>Biome
+    item:
+      back:
+        name: <!i><red>Zurück
+      biome:
+        name: "<!i><aqua><biome>"
+
