fix: fix current biome

--- a/src/main/resources/lang/de_DE.yml
+++ b/src/main/resources/lang/de_DE.yml
@@ -144,7 +144,7 @@ gui:
       biome:
         name: "<!i><gold>Biom ändern"
         lore:
-          - "<!i><gray>Derzeit: <green><biome>"
+          - "<!i><gray>Derzeit: <green><current-biome>"
       warp:
         name: "<!i><gold>Warp ändern"
         lore:
